Closed Bug 205622 Opened 23 years ago Closed 23 years ago

[ps] warning: CreateFontPS declared `static' but never defined

Categories

(Core :: Printing: Output, defect)

x86
BeOS
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/swap/BEOS/mozilla/gfx/src/ps/nsFontMetricsPS.cpp: 59: warning: `class nsFontPS * CreateFontPS(class nsITrueTypeFontCatalogEntry *, const struct nsFont &, class nsFontMetricsPS *)' declared `static' but never defined
Attachment #123310 - Flags: superreview?(peterv)
Attachment #123310 - Flags: review?(smontagu)
Comment on attachment 123310 [details] [diff] [review] use the same ifdef for the declaration as for the definition Is there any reason not to move the declaration to the header file?
Summary: warning: CreateFontPS declared `static' but never defined → [ps] warning: CreateFontPS declared `static' but never defined
It's a static function, i.e. one which shouldn't bleed out of this object file.
Status: NEW → ASSIGNED
Attachment #123310 - Flags: review?(smontagu) → review+
Attachment #123310 - Flags: superreview?(peterv) → superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: