Bug 205622 [ps] warning: CreateFontPS declared `static' but never defined r=smontagu sr=peterv